REGRESSION(264918@main): GB18030 encoding isn't hooked up correctly https://bugs.webkit.org/show_bug.cgi?id=258251 rdar://110952885

Reviewed by Myles C. Maxfield.

The 2022 changes to GB-180030 make 36 code points' encoding and decoding asymmetric, so we can't use the the same index lookup for both directions.
I add and update tests for encoding and decoding all 36 code points.

* LayoutTests/imported/w3c/web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-decoder.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-decoder.any.js:
* LayoutTests/imported/w3c/web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-decoder.any.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-encoder.html:
* Source/WebCore/PAL/pal/text/TextCodecCJK.cpp:
(PAL::gb18030AsymmetricEncode):
(PAL::gbEncodeShared):

Canonical link: https://commits.webkit.org/265633@main